--- a/link_prediction_2_supervised.ipynb
+++ b/link_prediction_2_supervised.ipynb
@@ -75,7 +75,7 @@
       "metadata": {
         "id": "eOTRPh9pJP9k",
         "colab_type": "code",
-        "outputId": "496e881d-16a6-422b-abfc-8950fbda0513",
+        "outputId": "dbe6feef-abc8-43d7-9251-4a3620e4fb38",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -88,7 +88,7 @@
         "graph.add_edges_from(edges.values)\n",
         "nx.info(graph)"
       ],
-      "execution_count": 0,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -179,7 +179,7 @@
       "metadata": {
         "id": "mv511-NhjnQC",
         "colab_type": "code",
-        "outputId": "b67a8c0d-9c88-416b-d88b-3b5bd96e8051",
+        "outputId": "5903ec7f-f56c-41c6-ae60-8c2a3212e916",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -188,7 +188,7 @@
       "source": [
         "len(marked_non_edges),len(non_edge_folds),len(non_edge_folds[0])"
       ],
-      "execution_count": 0,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -209,7 +209,7 @@
       "metadata": {
         "id": "xXlS9sZIjzlr",
         "colab_type": "code",
-        "outputId": "edb240b9-6e9c-4998-d164-8d269f44ea9d",
+        "outputId": "569310cd-2e5b-42b7-cfb8-84a65e78fd55",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 104
@@ -219,7 +219,7 @@
         "for x in edge_folds:  \n",
         "  print(len(x))"
       ],
-      "execution_count": 0,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -239,7 +239,7 @@
       "metadata": {
         "id": "V2enalMsj25q",
         "colab_type": "code",
-        "outputId": "736063dc-bc8c-40a8-9ae3-b7108657c7dd",
+        "outputId": "7ce6c45b-a25e-4eaa-e811-0b3cc818adfc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 104
@@ -249,7 +249,7 @@
         "for x in non_edge_folds:  \n",
         "  print(len(x))"
       ],
-      "execution_count": 0,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -1014,6 +1014,124 @@
             "avg. presicion: 0.8138322158973976\n",
             "avg. recall: 0.9441647156789135\n",
             "avg. auc: 0.8834893927459173\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "k4onGmPb66oQ",
+        "colab_type": "text"
+      },
+      "source": [
+        "DECISION TREE CLASSIFIER"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bJUnv3O68bsQ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "for i in range(5):\n",
+        "  print('preparing for iteration {}'.format(i))\n",
+        "  test_edges = edge_folds[i]\n",
+        "  test_edges_false = non_edge_folds[i]\n",
+        "  train_edges = []\n",
+        "  train_edges_false = []\n",
+        "  for j in range(5):\n",
+        "    if i == j:\n",
+        "      continue\n",
+        "    else:\n",
+        "      train_edges += edge_folds[j]\n",
+        "      train_edges_false += non_edge_folds[j]\n",
+        "  \n",
+        "  g_train = nx.Graph()\n",
+        "  g_train.add_nodes_from(all_nodes)\n",
+        "  g_train.add_edges_from(train_edges)\n",
+        "  print(nx.info(g_train))\n",
+        "  print('Preparing train dataset for this iteration')\n",
+        "  katz_matrix = katz_score(g_train,beta = 0.001)\n",
+        "  rp_matrix = rpr_matrix(g_train)\n",
+        "  print(len(train_edges), len(train_edges_false))\n",
+        "  print(len(test_edges), len(test_edges_false))\n",
+        "  X_train , y_train = prepare_X_y(g_train,train_edges,train_edges_false,katz_matrix,rp_matrix)\n",
+        "  df_trains.append((X_train,y_train))\n",
+        "  print('Train set prepared')\n",
+        "  \n",
+        "  # Test dataset preparation\n",
+        "  print('Preparing test dataset for this iteration')\n",
+        "  X_test , y_test = prepare_X_y(g_train,test_edges,test_edges_false,katz_matrix,rp_matrix)\n",
+        "  df_tests.append((X_test,y_test))\n",
+        "  print('Test set prepared')\n",
+        "  \n",
+        "  clf = DecisionTreeClassifier()\n",
+        "  clf.fit(X_train, y_train)\n",
+        "  \n",
+        "  y_pred = clf.predict(X_test)\n",
+        "  accuracy_score = metrics.accuracy_score(y_test, y_pred)\n",
+        "  accuracy_scores.append(accuracy_score)\n",
+        "  print(\"Accuracy score: {}\".format(float(accuracy_score)))\n",
+        "  confusion = metrics.confusion_matrix(y_test, y_pred)\n",
+        "  print(confusion)\n",
+        "  TP = confusion[1, 1]\n",
+        "  TN = confusion[0, 0]\n",
+        "  FP = confusion[0, 1]\n",
+        "  FN = confusion[1, 0]\n",
+        "  precision = TP / float(TP + FP)\n",
+        "\n",
+        "  print(\"precision score: {}\".format(precision))\n",
+        "  precision_scores.append(precision)\n",
+        "#   print(metrics.precision_score(y_test, y_pred))\n",
+        "\n",
+        "  sensitivity = TP / float(FN + TP)  #recall\n",
+        "  print(\"recall score: {}\".format(sensitivity))\n",
+        "  recall_scores.append(sensitivity)\n",
+        "#   print(metrics.recall_score(y_test, y_pred))\n",
+        "\n",
+        "  y_pred_prob = clf.predict_proba(X_test)[:, 1]\n",
+        "  auc_score = metrics.roc_auc_score(y_test, y_pred_prob)\n",
+        "  print(\"AUC score: {}\".format(auc_score))\n",
+        "  auc_scores.append(auc_score)\n",
+        "  \n",
+        "  print('completed iteration {}'.format(i))\n",
+        "  "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XoY4M4t27UNK",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 69
+        },
+        "outputId": "a8bdeb9f-7ea2-408c-8425-8226c851e2a2"
+      },
+      "source": [
+        "avg_precision = sum(precision_scores) / 5\n",
+        "avg_recall = sum(recall_scores) / 5\n",
+        "avg_scores = sum(auc_scores) / 5\n",
+        "\n",
+        "print('avg. presicion: {}'.format(avg_precision))\n",
+        "print('avg. recall: {}'.format(avg_recall))\n",
+        "print('avg. auc: {}'.format(avg_scores))"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "avg. presicion: 0.9987866899157222\n",
+            "avg. recall: 0.004176860959980313\n",
+            "avg. auc: 0.5020854363335465\n"
           ],
           "name": "stdout"
         }
